<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layoutdiolog"
    android:orientation="vertical"
    android:padding="10dp"
    >
    <TextView
        android:id="@+id/textview_baslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:text="@string/tvKisiSil"
        android:textColor="#706c6c"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/button_kaydet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="4dp"
            android:textSize="12sp"
            android:background="@drawable/btndiolog"
            android:text="@string/btnSil"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/button_iptal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:shadowRadius="20"
            android:layout_margin="4dp"
            android:textSize="12sp"
            android:background="@drawable/btndiolog"
            android:text="@string/btnIptal"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>