<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layoutdiolog"
    android:orientation="vertical"
    android:padding="10dp"
    >
    <ImageView
        android:id="@+id/uyari"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@android:drawable/sym_action_call"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/tvAra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:text="@string/tvKisiAra"
        android:textColor="#706c6c"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btnAra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="4dp"
            android:textSize="12sp"
            android:background="@drawable/btndiolog"
            android:text="@string/btnAra"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnIptal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:shadowRadius="20"
            android:layout_margin="4dp"
            android:textSize="12sp"
            android:background="@drawable/btndiolog"
            android:text="@string/btnIptal"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>