<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar2"
    android:background="@drawable/emojiler"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/tvKisiBilgileri"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic" />
    </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:layout_below="@+id/toolbar2">


                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/bos"
                    app:civ_border_width="6dp"
                    app:civ_border_color="@color/border"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="20dp"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_ad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layoutdiolog"
                    android:padding="5dp">

                    <EditText
                        android:importantForAutofill="noExcludeDescendants"
                        android:id="@+id/ad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etAd"
                        android:paddingTop="5dp"
                        android:inputType="text"
                        android:paddingLeft="5dp"
                        android:background="@android:color/transparent"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_soyad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layoutdiolog"
                    android:padding="5dp">

                    <EditText
                        android:importantForAutofill="noExcludeDescendants"
                        android:id="@+id/soyad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etSoyad"
                        android:paddingTop="5dp"
                        android:paddingLeft="5dp"
                        android:background="@android:color/transparent"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_telno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layoutdiolog"
                    android:padding="5dp">

                    <EditText
                        android:importantForAutofill="noExcludeDescendants"
                        android:id="@+id/telno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:hint="@string/etTelno"
                        android:background="@android:color/transparent"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layoutdiolog"
                    android:padding="5dp">

                    <EditText
                        android:importantForAutofill="noExcludeDescendants"
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etEmail"
                        android:maxLength="30"
                        android:paddingTop="5dp"
                        android:paddingLeft="5dp"
                        android:background="@android:color/transparent"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_adres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layoutdiolog"
                    android:padding="5dp">

                    <EditText
                        android:importantForAutofill="noExcludeDescendants"
                        android:id="@+id/adres"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etAdres"
                        android:paddingTop="5dp"
                        android:paddingLeft="5dp"
                        android:background="@android:color/transparent"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/tpDogumtarihi"
                    android:textSize="18sp"
                    android:id="@+id/dogumtarihi"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="1dp"
                    android:padding="5dp"
                    android:background="@drawable/layoutdiolog"
                    android:layout_marginLeft="1dp" />

                <RadioGroup
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/layoutdiolog"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:hint="@string/btnCinsiyet"
                        android:drawableLeft="@drawable/ic_gender"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:layout_weight="1"
                        android:layout_margin="4dp"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbKadin"
                        android:textSize="16sp"
                        android:id="@+id/rbKadin"
                        android:textColor="@color/colorAccent"/>

                    <RadioButton
                        android:id="@+id/rbErkek"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbErkek"
                        android:textSize="16sp"
                        android:textColor="@color/colorAccent"/>
                </RadioGroup>

                <Button
                    android:id="@+id/btnkaydet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnKaydet"
                    android:background="@color/colorPrimary"
                    android:layout_margin="20dp"
                    android:textColor="@android:color/white"
                    />
                <com.google.android.gms.ads.AdView
                    android:layout_gravity="center"
                    android:id="@+id/adView_kisiEkle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-5507053716111047/8478301885">
                </com.google.android.gms.ads.AdView>
            </LinearLayout>

    </RelativeLayout>

</LinearLayout>

</ScrollView>