<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/emojiler"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_kisi_bilgileri_goster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.myapp.yldzmamak.myapplication.KisiBilgileriGoster"
   >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:src="@drawable/back_arrow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right">
                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvKisiBilgisi"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:textColor="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="right">
                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="45dp"
                        android:id="@+id/btnDuzenle"
                        android:background="@android:color/transparent"
                        android:src="@android:drawable/ic_menu_edit"
                        android:layout_marginRight="0dp"
                        android:foregroundGravity="center"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        android:textColor="@android:color/white"
                        />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/bos"
                app:civ_border_width="6dp"
                app:civ_border_color="@color/border"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="0.2"
                />

            <TextView
                android:id="@+id/tvAdSoyad"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_toRightOf="@+id/profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvKisiAdSoyad"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textStyle="bold|italic"/>
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:drawablePadding="5dp"
            tools:text="05498856487"
            android:drawableLeft="@android:drawable/ic_menu_call"
            android:id="@+id/tvNumara"
            android:background="@drawable/layoutdiolog"
            android:shadowRadius="5" />

        <ImageButton
            android:id="@+id/btnAra"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:shadowRadius="5"
            android:src="@android:drawable/ic_menu_call"
            android:layout_alignParentRight="true"
            android:drawableRight="@android:drawable/ic_menu_call"
            android:background="@drawable/btnsil" />
    </RelativeLayout>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginRight="20dp"
       android:layout_marginLeft="20dp"
       android:layout_marginTop="20dp">
       <TextView
           android:paddingLeft="5dp"
           android:gravity="center_vertical"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:drawablePadding="5dp"
           tools:text="ufukunal@hotmail.com"
           android:drawableLeft="@android:drawable/ic_dialog_email"
           android:textSize="16sp"
           android:textColor="@color/colorAccent"
           android:id="@+id/tvMail"
           android:background="@drawable/layoutdiolog"
           android:shadowRadius="5" />

       <ImageButton
           android:id="@+id/btnMail"
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:shadowRadius="5"
           android:src="@android:drawable/ic_dialog_email"
           android:layout_alignParentRight="true"
           android:visibility="visible"
           android:background="@drawable/btnsil" />
   </RelativeLayout>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp">
       <TextView
           android:gravity="center_vertical"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:drawablePadding="5dp"
           android:textSize="16sp"
           android:textColor="@color/colorAccent"
           tools:text="05-12-1995"
           android:id="@+id/tvDgunu"
           android:background="@drawable/layoutdiolog"
           android:shadowRadius="5"
           android:drawableLeft="@android:drawable/ic_menu_my_calendar"
           />
   </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawablePadding="5dp"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            tools:text="kırklareli lüleburgaz"
            android:id="@+id/tvAdres"
            android:background="@drawable/layoutdiolog"
            android:shadowRadius="5"
            android:drawableLeft="@drawable/z"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/layoutdiolog">

        <TextView
            android:id="@+id/tvCinsiyetIcon"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btnCinsiyet"
            android:drawableLeft="@drawable/ic_gender"
            android:drawablePadding="10dp"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentLeft="true"
            android:layout_margin="4dp" />

        <TextView
            android:id="@+id/tvCinsiyet"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/tvCinsiyetIcon"
            android:textColor="@color/colorAccent"
            android:layout_margin="4dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">
        <com.google.android.gms.ads.AdView

            android:layout_gravity="center|bottom"
            android:id="@+id/adView_kisiBilgileri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-5507053716111047/8478301885">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</LinearLayout>
</ScrollView>